fix firefox scrollbar style

--- a/css/main.css
+++ b/css/main.css
@@ -45,12 +45,23 @@
 
 }
 
-/* scroll bar style */
 ::selection {
-    background-color: black;
-    color: #fff;
+    background-color:var(--main-color);
+    color: var(--sub-color);
 }
 
+
+/* scroll bar style */
+/* For Firefox */
+:root{
+    overflow-y: scroll;
+    scrollbar-color:  var(--main-color) #F5F5F5;
+    scrollbar-width: 12px;
+
+
+}
+
+/* For Chrome and other browsers except Firefox */
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
